<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app">About this app</string>
    <string name="ad_indicator_badge">Ad</string>
    <string name="ad_indicator_label">Ad by Etsy seller</string>
    <string name="add">Add</string>
    <string name="add_address_title">Add address</string>
    <string name="add_card_replan_error_desc">Please try another card.</string>
    <string name="add_card_replan_error_header">We had trouble confirming this card</string>
    <string name="add_listing_to_collection_content_description">Add %s to collection</string>
    <string name="add_multiple_listings_to_collection_alert">Added to %d collections</string>
    <string name="add_new_address">Add a new address</string>
    <string name="add_single_listing_to_collection_alert">Added to %s</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_cart_interstitial_section_title">Related items you may like</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="add_to_collection_prompt">Add to collection?</string>
    <string name="add_to_favorites">Add %s to favorites</string>
    <string name="add_video_error">Sorry, we couldn’t upload your video.</string>
    <string name="added_to_cart_confirmation">Added!</string>
    <string name="additional_information_sentence">Additional information</string>
    <string name="address_confirmation_header">We found a match for your address</string>
    <string name="address_confirmation_subheader">We couldn\'t verify your entry but recommend this match</string>
    <string name="address_delete_dialog_deletebutton">Delete address</string>
    <string name="address_delete_dialog_subtitle">This cannot be undone.</string>
    <string name="address_delete_dialog_title">Are you sure you want to delete this address?</string>
    <string name="address_delete_toast_error">Your address couldn\'t be deleted. Try again later.</string>
    <string name="address_delete_toast_success">Your address has been deleted.</string>
    <string name="address_input_header">Address you entered</string>
    <string name="address_list_no_addresses">You have no addresses</string>
    <string name="address_rec_header">Recommended match</string>
    <string name="address_second_line">Address line 2</string>
    <string name="address_zip">ZIP</string>
    <string name="adjusted_total">Adjusted total</string>
    <string name="admin_toolbar">Admin Toolbar</string>
    <string name="admin_toolbar_ab_tests_title">AB tests:</string>
    <string name="admin_toolbar_activity_title">Activity:</string>
    <string name="admin_toolbar_fragment_title">Fragment:</string>
    <string name="admin_toolbar_recreate_action">RECREATE ACTIVITY</string>
    <string name="admin_toolbar_title">Use admin toolbar</string>
    <string name="administrative_area_district">District</string>
    <string name="all_categories">All categories</string>
    <string name="all_items">All Items</string>
    <string name="all_purchases">All purchases</string>
    <string name="all_reviews">All Reviews</string>
    <string name="amp_label_copied">Copied To Clipboard</string>
    <string name="amp_label_copy">Copy</string>
    <string name="amp_label_device_id">DEVICE ID</string>
    <string name="amp_label_not_avail">N/A</string>
    <string name="amp_label_user_id">USER ID</string>
    <string name="amp_label_user_info">User Information</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="announcement">Announcement</string>
    <string name="app_name">Etsy</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied_coupon_icon_description">Coupon</string>
    <string name="apply">Apply</string>
    <string name="apt_suite_other">Apt / Suite / Other</string>
    <string name="archiving_conversation">Archiving</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="area">Area</string>
    <string name="around_the_web">Around the web</string>
    <string name="attached_image_button">Attached image %d</string>
    <string name="autocomplete_suggestion_desc">Populate the search field with %s suggestion</string>
    <string name="average_item_review">Average Item Review:</string>
    <string name="average_item_review_no_colon">Average Item Review</string>
    <string name="back">Back</string>
    <string name="back_to_top">Back to top</string>
    <string name="badge_saved_search_updated_results">New results for saved search %s</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="branch_api_key">key_live_hmsoc8ULJiG4LhuSurhavdjkrvlCxmSl</string>
    <string name="branch_api_test_key">key_test_fcEno5TPMfH6MaCPCyfDeedauBpwqiME</string>
    <string name="btn_move_to_cart">Move to cart</string>
    <string name="bullet">•</string>
    <string name="buy_it_now">Buy it now</string>
    <string name="buy_this_again">Buy this again</string>
    <string name="buy_this_again_desc">Buy %1$s by %2$s again</string>
    <string name="buy_this_again_without_shop_name_desc">Buy %1$s again</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="buyer_favorite_big_title_many">%d new favorites</string>
    <string name="buyer_favorite_big_title_one">New favorite</string>
    <string name="buyer_left_review_big_title_many">%d new shop reviews</string>
    <string name="buyer_left_review_big_title_one">New shop feedback</string>
    <string name="buyer_review_content_description">Large product image</string>
    <string name="buyer_reviews_available_big_title_many">%d items to review</string>
    <string name="buyer_reviews_available_big_title_one">New item to review</string>
    <string name="buyer_videos_alert_message">Watch short videos of the item in action through the eyes of buyers.</string>
    <string name="buyer_videos_alert_title">Introducing buyer videos!</string>
    <string name="by_generic">by %s</string>
    <string name="calculate_shipping">Calculate shipping</string>
    <string name="camera_helper_image_load_error">Error attaching file. Please try a different image.</string>
    <string name="cancel">Cancel</string>
    <string name="card_network">Card Network</string>
    <string name="cart_add_shop_coupon_bottom_sheet_input_label">Enter coupon code</string>
    <string name="dark_mode_follow_system">Follow system</string>
    <string name="dark_mode_off">Off</string>
    <string name="dark_mode_on">On</string>
    <string name="event_horizon_browserid_title">Browser ID</string>
    <string name="event_horizon_eventlogger_title">Event Logger</string>
    <string name="event_horizon_eventname_title">Event Name</string>
    <string name="event_horizon_eventsource_title">Event Source</string>
    <string name="event_horizon_guid_title">GUID</string>
    <string name="event_horizon_ip_title">IP</string>
    <string name="event_horizon_loc_title">Loc</string>
    <string name="event_horizon_pageguid_title">Page GUID</string>
    <string name="event_horizon_rawevent_title">Raw Event</string>
    <string name="event_horizon_ref_title">Ref</string>
    <string name="event_horizon_timestamp_title">Timestamp</string>
    <string name="event_horizon_useragent_title">User Agent</string>
    <string name="event_horizon_userid_title">User ID</string>
    <string name="gift_options_gift_message">Add gift message for free</string>
    <string name="gift_options_gift_message_hint">Enter your message</string>
    <string name="gift_options_gift_wrap_details">Details</string>
    <string name="gift_options_marked_gift">This order is a gift</string>
    <string name="new_message_add_photos">Add up to 3 photos</string>
    <string name="new_message_message">Message</string>
    <string name="new_message_subject">Subject</string>
    <string name="new_message_username">Username</string>
    <string name="new_search_filter_shop_location_anywhere">Anywhere</string>
    <string name="new_search_filter_shop_location_custom_hint">Enter location name</string>
    <string name="new_search_filter_shop_location_custom_title">Custom location</string>
    <string name="paypal_auth_common_header_back_press">back press</string>
    <string name="paypal_auth_common_header_close">close</string>
    <string name="paypal_auth_common_header_paypal_logo">PayPal logo</string>
    <string name="paypal_auth_otp_login_back_press">back press</string>
    <string name="paypal_auth_otp_login_close">close</string>
    <string name="paypal_auth_otp_login_log_in_fast_with_a_one_time_code">Log in fast with a one-time code</string>
    <string name="paypal_auth_otp_login_paypal_logo">PayPal logo</string>
    <string name="paypal_auth_otp_login_we_ll_send_a_code_to">We\'ll send a code to:</string>
    <string name="review_filtered_results_clear_filters">Try removing one or more of the filters or start over</string>
    <string name="review_filtered_results_none_found">No results found</string>
    <string name="review_see_all_reviews">See all reviews</string>
    <string name="save_for_later_no_items_body">Not quite ready to buy?\10Save it here until you’re ready.</string>
    <string name="save_for_later_no_items_cta">View cart</string>
    <string name="save_for_later_no_items_title">No items saved for later</string>
</resources>