<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/padding_medium_large" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_eventname_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_eventname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_timestamp_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_timestamp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@color/divider">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_browserid_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_browserid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@color/divider">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_userid_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_userid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_guid_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_guid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_pageguid_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_pageguid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_eventsource_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_eventsource" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_eventlogger_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_eventlogger" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_ip_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_ip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_useragent_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_useragent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_loc_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_loc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_ref_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_ref" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="96dp" android:layout_height="wrap_content" android:text="@string/event_horizon_rawevent_title" style="@style/TextBlack"/>
            <TextView android:id="@+id/event_horizon_detail_raw" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" style="@style/TextBlack.Large"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
