<?xml version="1.0" encoding="utf-8"?>
<com.etsy.android.stylekit.views.CollageRadioGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.etsy.android.stylekit.views.CollageRadioButton android:id="@+id/dark_mode_follow_system" android:layout_width="match_parent" android:layout_height="wrap_content" app:clg_direction="1" app:clg_text="@string/dark_mode_follow_system"/>
    <com.etsy.android.stylekit.views.CollageRadioButton android:id="@+id/dark_mode_on" android:layout_width="match_parent" android:layout_height="wrap_content" app:clg_direction="1" app:clg_text="@string/dark_mode_on"/>
    <com.etsy.android.stylekit.views.CollageRadioButton android:id="@+id/dark_mode_off" android:layout_width="match_parent" android:layout_height="wrap_content" app:clg_direction="1" app:clg_text="@string/dark_mode_off"/>
</com.etsy.android.stylekit.views.CollageRadioGroup>
