<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/imageViewBackButton" android:layout_width="@dimen/margin_20x" android:layout_height="@dimen/margin_20x" android:layout_marginTop="@dimen/margin_32x" android:src="@drawable/ic_arrow_back_icon" android:contentDescription="@string/paypal_auth_otp_login_back_press" android:layout_marginStart="@dimen/margin_20x" app:layout_constraintBottom_toTopOf="@+id/imageView" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/imageClose" android:layout_width="@dimen/margin_32x" android:layout_height="@dimen/margin_32x" android:layout_marginTop="@dimen/margin_32x" android:layout_marginRight="@dimen/margin_16x" android:src="@drawable/ic_exit_icon" android:contentDescription="@string/paypal_auth_otp_login_close" app:layout_constraintBottom_toTopOf="@+id/imageView" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/imageView" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginTop="@dimen/margin_44x" android:layout_marginBottom="@dimen/margin_8x" android:src="@drawable/ic_paypal_mark_color" android:contentDescription="@string/paypal_auth_otp_login_paypal_logo" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/PYPLTextViewTitleStyle3" android:gravity="center_horizontal" android:id="@+id/text_otp_login_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_12x" android:text="@string/paypal_auth_otp_login_log_in_fast_with_a_one_time_code" android:layout_marginStart="@dimen/margin_60x" android:layout_marginEnd="@dimen/margin_60x" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintVertical_bias="0.035"/>
    <com.google.android.material.textview.MaterialTextView android:gravity="center_horizontal" android:id="@+id/text_send_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_12x" android:text="@string/paypal_auth_otp_login_we_ll_send_a_code_to" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/text_otp_login_title" app:layout_constraintVertical_bias="1" style="@style/PYPLTextViewTitleStyle4"/>
</androidx.constraintlayout.widget.ConstraintLayout>
