<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:paddingTop="0dp" android:paddingBottom="0dp" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/MultiShopCartGroupItem">
    <CheckBox android:id="@+id/gift_options_gift_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-8dp" android:text="@string/gift_options_marked_gift" android:lineSpacingExtra="@dimen/clg_space_4"/>
    <CheckBox android:id="@+id/gift_options_gift_message_checkbox" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-8dp" android:layout_marginTop="@dimen/clg_space_8" android:text="@string/gift_options_gift_message" android:lineSpacingExtra="@dimen/clg_space_4"/>
    <EditText android:id="@+id/gift_options_gift_message" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/clg_space_20" android:hint="@string/gift_options_gift_message_hint" android:maxLength="150" android:inputType="none|text|textCapSentences|textAutoComplete" android:imeOptions="actionDone" style="@style/sk_text_body"/>
    <TextView android:textColor="@color/orange" android:id="@+id/gift_options_gift_message_error" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/clg_space_24" android:layout_marginBottom="@dimen/clg_space_8" style="@style/sk_text_body_smaller"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/gift_options_gift_wrap_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="-8dp" android:layout_marginTop="@dimen/clg_space_8">
        <CheckBox android:id="@+id/gift_options_gift_wrap_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:textSize="@dimen/text_small" android:id="@+id/gift_options_gift_wrap_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/clg_space_16" android:text="@string/gift_options_gift_wrap_details" style="@style/TextBlack.Bold"/>
    </LinearLayout>
</LinearLayout>
