<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/iv_back" android:layout_width="@dimen/margin_20x" android:layout_height="@dimen/margin_20x" android:layout_marginLeft="@dimen/margin_20x" android:layout_marginTop="@dimen/margin_24x" android:src="@drawable/ic_header_back" android:contentDescription="@string/paypal_auth_common_header_back_press" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/iv_close" android:layout_width="@dimen/margin_32x" android:layout_height="@dimen/margin_32x" android:layout_marginTop="@dimen/margin_24x" android:layout_marginRight="@dimen/margin_20x" android:src="@drawable/ic_header_close" android:contentDescription="@string/paypal_auth_common_header_close" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageView android:id="@+id/iv_logo" android:layout_width="@dimen/margin_60x" android:layout_height="@dimen/margin_60x" android:layout_marginTop="@dimen/margin_24x" android:src="@drawable/ic_header_paypal_mark_color" android:contentDescription="@string/paypal_auth_common_header_paypal_logo" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.136"/>
</androidx.constraintlayout.widget.ConstraintLayout>
